# rust_practices

./: README
01_first_steps/: README
01_first_steps/src/: main.rs
03_dungeons_and_cargos/: Cargo.toml  history.csv
03_dungeons_and_cargos/src/: main.rs
04_string_slices/src/: main.rs
05_circle_struct/: Cargo.toml
05_circle_struct/src/: main.rs
06_fn_closures/: Cargo.toml
06_fn_closures/src/: main.rs
07_ownerships/src/: main.rs
08_raiis/: Cargo.toml
08_raiis/src/: main.rs
09_rc_pointer/: Cargo.toml
09_rc_pointer/src/: main.rs
10_lifetime/src/: main.rs
11_oop/src/: main.rs
12_polymorphism/src/: main.rs
13_operator_overload/: Cargo.toml
13_operator_overload/src/: main.rs
14_result_pattern/: Cargo.toml  file.txt
14_result_pattern/src/: main.rs
15_project_file_parser/: Cargo.toml
15_project_file_parser/src/: main.rs
16_project_rendezvous_hash/: Cargo.toml
16_project_rendezvous_hash/src/: main.rs
17_blog/: .env  Cargo.toml  diesel.toml
17_blog/migrations/2024-09-25-190842_create_posts/: up.sql
17_blog/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
17_blog/src/models/: post.rs
17_blog/src/routes/: posts.rs
calc/: Cargo.toml
calc/src/: main.rs
first-steps/: Cargo.toml
first-steps/src/: main.rs
