[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[lib]
doc = false

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slug = "0.1.6"
uuid = "1.10.0"
